# assist

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .releaserc.json  CHANGELOG.md  CLAUDE.md  PROGRESS.md  README.md  STT_PLAN.md  allowed.cli-reads  allowed.cli-writes  assist.backlog.yml  assist.cli-reads  assist.yml  biome.json  knip.json  package-lock.json  package.json  prs-reply-test.md  refactor.yml  tsconfig.json  tsup.config.ts  vitest.config.ts
.assist/: backlog.db  backlog.jsonl  spike-75.md
.claude/: settings.json  settings.local.json
.claude/commands/: db-migrate.md  readme.md
.github/workflows/: release.yml
claude/: CLAUDE.md  settings.json  system-prompt.md
claude/commands/: add-command.md  associate-jira.md  branch.md  bug.md  comment.md  commit.md  design.md  devlog.md  draft.md  forward-comments.md  generate-cli-read-verbs.md  github.md  handover.md  inspect.md  jira.md  journal.md  next.md  pr.md  (+31 more)
codex/: config.toml
docs/: codex.md  repo-operations.md  session-lifecycle.md  worktree-isolation-design.md
netcap-extension/: background.js  interceptor.js  manifest.json  relay.js
oxlint-rules/: filenameConvention.ts
pi/: permission-gate.ts  status-driver.ts
src/: findSourceFiles.ts  index.ts  marked-terminal.d.ts  refractor.d.ts  registerCommands.ts  registerDevlogCommands.ts  registerRefactorCommands.ts  reportCliError.ts
src/commands/voice/python/: CLAUDE.md  audio_capture.py  check_mi.py  dispatch.py  keyboard.py  list_devices.py  logger.py  pyproject.toml  setup_models.py  smart_turn.py  stt.py  vad.py  voice_daemon.py  wake_word.py
(+2203 files in other folders)
