[project]
name = "assist-voice"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
runtime = [
    "onnxruntime>=1.17",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "nemo_toolkit[asr]>=1.22",
    "silero-vad>=5.1",
    "torch>=2.0",
]
dev = [
    "radon>=6.0",
    "ruff>=0.8",
    "xenon>=0.9",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

